--- a/requirements.txt
+++ b/requirements.txt
@@ -1,71 +1,71 @@
-amqp==5.3.1
-asgiref==3.8.1
-asn1crypto==1.5.1
-beautifulsoup4==4.12.3
-billiard==4.2.1
-black==24.10.0
-braintree==4.34.0
-celery==5.4.0
-certifi==2025.1.31
-cffi==1.17.1
-charset-normalizer==3.4.1
-click==8.1.8
-click-didyoumean==0.3.1
-click-plugins==1.1.1
-click-repl==0.3.0
-cmake==3.31.1
-colorama==0.4.6
-crispy-bootstrap4==2024.10
-crispy-bootstrap5==2024.10
-cryptography==44.0.0
-decouple==0.0.7
-defusedxml==0.8.0rc2
-Django==4.2.16
-django-bootstrap-v5==1.0.11
-django-crispy-forms==2.3
-django-extensions==3.2.3
-django-fontawesome==1.0
-django-jazzmin==3.0.1
-django-use-email-as-username==1.4.0
-djangorestframework==3.15.2
-flower==2.0.1
-fontawesomefree==6.6.0
-humanize==4.12.1
-idna==3.10
-kombu==5.5.0
-MarkupSafe==3.0.2
-mypy-extensions==1.0.0
-oauthlib==3.2.2
-packaging==24.2
-pathspec==0.12.1
-pg8000==1.31.2
-pillow==11.0.0
-platformdirs==4.3.6
-prometheus_client==0.21.1
-prompt_toolkit==3.0.50
-psycopg==3.1.8
-pycparser==2.22
-PyGreSQL==6.1.0
-PyJWT==2.10.1
-pyOpenSSL==25.0.0
+amqp
+asgiref
+asn1crypto
+beautifulsoup4
+billiard
+black
+braintree
+celery
+certifi
+cffi
+charset-normalizer
+click
+click-didyoumean
+click-plugins
+click-repl
+cmake
+colorama
+crispy-bootstrap4
+crispy-bootstrap5
+cryptography
+decouple
+defusedxml
+Django
+django-bootstrap-v5
+django-crispy-forms
+django-extensions
+django-fontawesome
+django-jazzmin
+django-use-email-as-username
+djangorestframework
+flower
+fontawesomefree
+humanize
+idna
+kombu
+MarkupSafe
+mypy-extensions
+oauthlib
+packaging
+pathspec
+pg8000
+pillow
+platformdirs
+prometheus_client
+prompt_toolkit
+psycopg
+pycparser
+PyGreSQL
+PyJWT
+pyOpenSSL
 python-dateutil==2.9.0.post0
-python3-openid==3.2.0
+python3-openid
 pytz==2025.1
-PyYAML==6.0.2
-redis==5.2.1
-requests==2.32.3
-requests-oauthlib==2.0.0
-scramp==1.4.5
-six==1.17.0
-social-auth-app-django==5.4.2
-social-auth-core==4.5.4
-soupsieve==2.6
-sqlparse==0.5.1
-tornado==6.4.2
-typing_extensions==4.12.2
-tzdata==2025.1
-urllib3==2.3.0
-vine==5.1.0
-wcwidth==0.2.13
-Werkzeug==3.1.3
-whitenoise==6.8.2
+PyYAML
+redis
+requests
+requests-oauthlib
+scramp
+six
+social-auth-app-django
+social-auth-core
+soupsieve
+sqlparse
+tornado
+typing_extensions
+tzdata
+urllib3
+vine
+wcwidth
+Werkzeug
+whitenoise
