--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,15 @@
 {
-    "builds": [{
-        "src": "kbt_marketplace/wsgi.py",
-        "use": "@vercel/python",
-        "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
-    }],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "kbt_marketplace/wsgi.py"
-        }
-    ]
+  "builds": [
+    {
+      "src": "kbt_marketplace/wsgi.py",
+      "use": "@vercel/python",
+      "config": { "maxLambdaSize": "15mb", "runtime": "python3.12" }
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "kbt_marketplace/wsgi.py"
+    }
+  ]
 }
